--- a/SHUPV.Database.WeatherInfo/SHUPV.Database.WeatherInfo.csproj
+++ b/SHUPV.Database.WeatherInfo/SHUPV.Database.WeatherInfo.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="SHUPV.Database.WeatherDatabase">
+      <HintPath>..\SHUPV.Database.WeatherDatabase\bin\Debug\SHUPV.Database.WeatherDatabase.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeatherInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
