--- a/SHUPV.Database.Core/SHUPV.Database.Core.csproj
+++ b/SHUPV.Database.Core/SHUPV.Database.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDC5D564-0D09-4B61-8C18-BDDFF08A19C5}</ProjectGuid>
+    <ProjectGuid>{B980B374-1CCC-4AB7-8B00-ADFDADDEFE60}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SHUPV.Database</RootNamespace>
-    <AssemblyName>SHUPV.Database</AssemblyName>
+    <RootNamespace>SHUPV.Database.Core</RootNamespace>
+    <AssemblyName>SHUPV.Database.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="SHUPV.Database.Connection">
-      <HintPath>lib\SHUPV.Database.Connection.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,9 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InverterData.cs" />
+    <Compile Include="DatabaseCore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeatherData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
